@@ -174,6 +174,8 @@ CMainFrame::CMainFrame()
 	
 	m_pNotebook = new CNotebook();
 	gtk_notebook_set_scrollable(GTK_NOTEBOOK(m_pNotebook->m_Widget), TRUE);
+	g_signal_connect( G_OBJECT(m_pNotebook->m_Widget), "button_press_event", 
+			G_CALLBACK(CMainFrame::OnNotebookPopupMenu), this );
 
 	CreateMenu();
 	CreateToolbar();
@@ -1241,6 +1243,42 @@ void CMainFrame::OnNotebookChangeCurPage(GtkNotebook* widget, GtkNotebookPage* p
 {
 	_this->SetCurView( _this->m_Views[page_num] );
 }
+
+gboolean CMainFrame::OnNotebookPopupMenu(GtkWidget *widget, GdkEventButton *event, gpointer p_mainframe)
+{
+       static GtkWidget *menu = NULL;
+       GtkWidget *menu_item_close = gtk_image_menu_item_new_with_label( _("Close") );
+       GtkWidget *menu_item_reconnect = gtk_image_menu_item_new_with_label( _("Reconnect") );
+       GtkWidget *image_close = gtk_image_new_from_stock ("gtk-close", GTK_ICON_SIZE_MENU);
+       GtkWidget *image_reconnect = gtk_image_new_from_stock ("gtk-undo", GTK_ICON_SIZE_MENU);
+       gtk_image_menu_item_set_image ( (GtkImageMenuItem *)menu_item_close, image_close);
+       gtk_image_menu_item_set_image ( (GtkImageMenuItem *)menu_item_reconnect, image_reconnect);
+
+       if (event->type != GDK_BUTTON_PRESS || event->button != 3)
+               return FALSE;
+       if (menu != NULL)
+               gtk_widget_destroy(menu);
+       menu = gtk_menu_new();
+
+       
+       gtk_widget_show (menu_item_reconnect);
+       gtk_container_add (GTK_CONTAINER (menu), menu_item_reconnect);
+
+       gtk_widget_show (menu_item_close);
+       gtk_container_add (GTK_CONTAINER (menu), menu_item_close);
+
+       g_signal_connect ( G_OBJECT(menu_item_reconnect), "activate",
+                       G_CALLBACK (CMainFrame::OnReconnect),
+                       p_mainframe);
+       g_signal_connect ( G_OBJECT(menu_item_close), "activate",
+                       G_CALLBACK (CMainFrame::OnCloseCon),
+                       p_mainframe);
+
+       gtk_menu_popup(GTK_MENU(menu), NULL, NULL, NULL, NULL, event->button, event->time);
+       return TRUE;
+
+}
+
 
 void CMainFrame::CloseCon(int idx, bool confirm)
 {
